add lessdata